@@ -1,93 +1,86 @@
-# scenebuilder
+# Gluon Scene Builder #
 
+Gluon [Scene Builder](http://gluonhq.com/products/scene-builder/) is a drag and drop UI designer tool allowing rapid desktop and mobile app development.
+Scene Builder separates design from logic, allowing team members to quickly and easily focus on their specific aspect of application development.
 
+Scene Builder works with the JavaFX ecosystem – official controls, community projects, and Gluon offerings including
+[Gluon Mobile](http://gluonhq.com/products/mobile),
+[Gluon Desktop](http://gluonhq.com/products/desktop), and
+[Gluon CloudLink](http://gluonhq.com/products/cloudlink).
 
-## Getting started
+Scene Builder is open source, and it is freely licensed under the BSD license.
+[Gluon](http://gluonhq.com) can provide [custom consultancy](http://gluonhq.com/services/consulting/), [training](http://gluonhq.com/services/training/), and open source [commercial support](http://gluonhq.com/services/commercial-support/).
 
-To make it easy for you to get started with GitLab, here's a list of recommended next steps.
+## Getting started ##
 
-Already a pro? Just edit this README.md and make it your own. Want to make it easy? [Use the template at the bottom](#editing-this-readme)!
+The best way to get started with Gluon Scene Builder is by downloading and installing on your developer machine the latest 
+[Scene Builder release](http://gluonhq.com/products/scene-builder/#download).
 
-## Add your files
+See the [documentation](http://docs.gluonhq.com/scenebuilder/) about the new features recently included.
 
-- [ ] [Create](https://docs.gitlab.com/ee/user/project/repository/web_editor.html#create-a-file) or [upload](https://docs.gitlab.com/ee/user/project/repository/web_editor.html#upload-a-file) files
-- [ ] [Add files using the command line](https://docs.gitlab.com/topics/git/add_files/#add-files-to-a-git-repository) or push an existing Git repository with the following command:
+For community support, go to [StackOverflow](https://stackoverflow.com/questions/tagged/scenebuilder).
+
+## Issues and Contributions ##
+
+Issues can be reported to the [Issue tracker](https://github.com/gluonhq/scenebuilder/issues/)
+
+Contributions can be submitted via [Pull requests](https://github.com/gluonhq/scenebuilder/pulls/), 
+providing you have signed the [Gluon Individual Contributor License Agreement (CLA)](https://cla.gluonhq.com).
+
+## Building Scene Builder ##
+
+### Requisites ###
+
+Gluon Scene Builder is frequently released, and this is only required in case you want to fork and build your local version of Scene Builder.
+
+These are the requisites:
+
+* A recent version of [JDK 11 or later](https://www.oracle.com/technetwork/java/javase/downloads/index.html) for building 'master' branch
+* A recent version of [JDK 8](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) for building '8u-dev' branch
+
+### How to build Scene Builder ###
+
+To build the Scene Builder services, on the project's root, run:
+
+`mvn clean package`
+
+It will create a partial shadow cross-platform jar under `app/target/lib/scenebuilder-$version.jar`, that doesn't include the JavaFX dependencies.
+
+### How to run Scene Builder ###
+
+Before starting the app, all dependencies must be installed locally.
+This is achieved by:
+
+`mvn install`
+
+Then Scene Builder can be started with Maven:
+
+`mvn javafx:run -f app`
+
+Alternatively, you can run the partial shadow jar, providing you have downloaded the JavaFX SDK from [here](https://gluonhq.com/products/javafx/):
 
 ```
-cd existing_repo
-git remote add origin http://gitlab.treilhes.home/jfxapps/scenebuilder.git
-git branch -M main
-git push -uf origin main
+java 
+--module-path /path/to/javafx-sdk-$javafxVersion/lib \
+--add-modules javafx.web,javafx.fxml,javafx.swing,javafx.media \
+--add-opens=javafx.fxml/javafx.fxml=ALL-UNNAMED \
+-cp app/target/lib/scenebuilder-$version.jar \
+com.oracle.javafx.scenebuilder.app.SceneBuilderApp
 ```
 
-## Integrate with your tools
+## Scene Builder Kit ##
 
-- [ ] [Set up project integrations](http://gitlab.treilhes.home/jfxapps/scenebuilder/-/settings/integrations)
+To build and install the Scene Builder Kit in your local repository, run:
 
-## Collaborate with your team
+`mvn clean install -f kit`
 
-- [ ] [Invite team members and collaborators](https://docs.gitlab.com/ee/user/project/members/)
-- [ ] [Create a new merge request](https://docs.gitlab.com/ee/user/project/merge_requests/creating_merge_requests.html)
-- [ ] [Automatically close issues from merge requests](https://docs.gitlab.com/ee/user/project/issues/managing_issues.html#closing-issues-automatically)
-- [ ] [Enable merge request approvals](https://docs.gitlab.com/ee/user/project/merge_requests/approvals/)
-- [ ] [Set auto-merge](https://docs.gitlab.com/user/project/merge_requests/auto_merge/)
+The custom controls of the Scene Builder kit can be used in your project.
+You can add it as a regular dependency to the build of your app:
 
-## Test and Deploy
-
-Use the built-in continuous integration in GitLab.
-
-- [ ] [Get started with GitLab CI/CD](https://docs.gitlab.com/ee/ci/quick_start/)
-- [ ] [Analyze your code for known vulnerabilities with Static Application Security Testing (SAST)](https://docs.gitlab.com/ee/user/application_security/sast/)
-- [ ] [Deploy to Kubernetes, Amazon EC2, or Amazon ECS using Auto Deploy](https://docs.gitlab.com/ee/topics/autodevops/requirements.html)
-- [ ] [Use pull-based deployments for improved Kubernetes management](https://docs.gitlab.com/ee/user/clusters/agent/)
-- [ ] [Set up protected environments](https://docs.gitlab.com/ee/ci/environments/protected_environments.html)
-
-***
-
-# Editing this README
-
-When you're ready to make this README your own, just edit this file and use the handy template below (or feel free to structure it however you want - this is just a starting point!). Thanks to [makeareadme.com](https://www.makeareadme.com/) for this template.
-
-## Suggestions for a good README
-
-Every project is different, so consider which of these sections apply to yours. The sections used in the template are suggestions for most open source projects. Also keep in mind that while a README can be too long and detailed, too long is better than too short. If you think your README is too long, consider utilizing another form of documentation rather than cutting out information.
-
-## Name
-Choose a self-explaining name for your project.
-
-## Description
-Let people know what your project can do specifically. Provide context and add a link to any reference visitors might be unfamiliar with. A list of Features or a Background subsection can also be added here. If there are alternatives to your project, this is a good place to list differentiating factors.
-
-## Badges
-On some READMEs, you may see small images that convey metadata, such as whether or not all the tests are passing for the project. You can use Shields to add some to your README. Many services also have instructions for adding a badge.
-
-## Visuals
-Depending on what you are making, it can be a good idea to include screenshots or even a video (you'll frequently see GIFs rather than actual videos). Tools like ttygif can help, but check out Asciinema for a more sophisticated method.
-
-## Installation
-Within a particular ecosystem, there may be a common way of installing things, such as using Yarn, NuGet, or Homebrew. However, consider the possibility that whoever is reading your README is a novice and would like more guidance. Listing specific steps helps remove ambiguity and gets people to using your project as quickly as possible. If it only runs in a specific context like a particular programming language version or operating system or has dependencies that have to be installed manually, also add a Requirements subsection.
-
-## Usage
-Use examples liberally, and show the expected output if you can. It's helpful to have inline the smallest example of usage that you can demonstrate, while providing links to more sophisticated examples if they are too long to reasonably include in the README.
-
-## Support
-Tell people where they can go to for help. It can be any combination of an issue tracker, a chat room, an email address, etc.
-
-## Roadmap
-If you have ideas for releases in the future, it is a good idea to list them in the README.
-
-## Contributing
-State if you are open to contributions and what your requirements are for accepting them.
-
-For people who want to make changes to your project, it's helpful to have some documentation on how to get started. Perhaps there is a script that they should run or some environment variables that they need to set. Make these steps explicit. These instructions could also be useful to your future self.
-
-You can also document commands to lint the code or run tests. These steps help to ensure high code quality and reduce the likelihood that the changes inadvertently break something. Having instructions for running tests is especially helpful if it requires external setup, such as starting a Selenium server for testing in a browser.
-
-## Authors and acknowledgment
-Show your appreciation to those who have contributed to the project.
-
-## License
-For open source projects, say how it is licensed.
-
-## Project status
-If you have run out of energy or time for your project, put a note at the top of the README saying that development has slowed down or stopped completely. Someone may choose to fork your project or volunteer to step in as a maintainer or owner, allowing your project to keep going. You can also make an explicit request for maintainers.
+```
+<dependency>
+  <groupId>com.gluonhq.scenebuilder</groupId>
+  <artifactId>kit</artifactId>
+  <version>$version</version>
+</dependency>
+```
